5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1764_1583.log
== TEST (2019-05-30 00:02:08) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
# Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini : fim]
nova_data = str(dia) + '.' + mes_abrev + '.' + ano
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    mes = int(data[3:5])
ValueError: invalid literal for int() with base 10: ''
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:02:36) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
# Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev =[ini : fim]
nova_data = str(dia) + '.' + mes_abrev + '.' + ano
print(nova_data)
-- ERROR:
File "XXXX", line 9
    mes_abrev =[ini : fim]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:02:41) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
# Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev [ini : fim]
nova_data = str(dia) + '.' + mes_abrev + '.' + ano
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    mes = int(data[3:5])
ValueError: invalid literal for int() with base 10: ''
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:03:37) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]

# Mes abreviado

nova_data = str(dia) + '.' + mes_abrev + '.' + ano
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    mes = int(data[3:5])
ValueError: invalid literal for int() with base 10: ''
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:04:00) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]



nova_data = str(dia) + '.' + mes + '.' + ano
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    mes = int(data[3:5])
ValueError: invalid literal for int() with base 10: ''
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:04:10) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]



nova_data = dia + '.' + mes + '.' + ano
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    mes = int(data[3:5])
ValueError: invalid literal for int() with base 10: ''
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:04:21) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")
dia = data[:2]
mes = int(data[3:5])
ano = data[-4:]



nova_data = dia + '.' + mes + '.' + ano
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    mes = int(data[3:5])
ValueError: invalid literal for int() with base 10: ''
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:04:30) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")
dia = data[:2]
mes = data[3:5]
ano = data[-4:]



nova_data = dia + '.' + mes + '.' + ano
print(nova_data)
-- OUTPUT:
12..123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:04:54) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")
dia = data[:3]
mes = data[3:6]
ano = data[-3:]



nova_data = dia + '.' + mes + '.' + ano
print(nova_data)
-- OUTPUT:
123..123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:05:00) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")
dia = data[:3]
mes = data[3:6]
ano = data[-3:]



nova_data = dia + '.' + mes + '.' + ano
print(nova_data)
-- EXECUTION TIME:
0.16961
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:05:32) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")
dia = data[:3]
mes = data[3:6]
ano = data[-3:]



nova_data = dia + '.' + mes + '.' + ano
print(round(nova_data,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(nova_data,3))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:08:06) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")
i=0
while(i<size(data)):
	primeira = data[:3]
	segundo = data[3:6]
	terceira = data[-3:]



nova_data = dia + '.' + mes + '.' + ano
print(nova_data,3)
-- EXECUTION TIME:
0.1639
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1583/main.py", line 3, in <module>
    while(i<size(data)):
NameError: name 'size' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:08:12) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")
i=0

	primeira = data[:3]
	segundo = data[3:6]
	terceira = data[-3:]



nova_data = dia + '.' + mes + '.' + ano
print(nova_data,3)
-- EXECUTION TIME:
0.17919
-- ERROR:
  File "/home/codebench/codes/1764/1583/main.py", line 4
    primeira = data[:3]
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:08:18) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")

primeira = data[:3]
segundo = data[3:6]
terceira = data[-3:]



nova_data = dia + '.' + mes + '.' + ano
print(nova_data,3)
-- EXECUTION TIME:
0.189046
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1583/main.py", line 9, in <module>
    nova_data = dia + '.' + mes + '.' + ano
NameError: name 'dia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:08:19) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")

primeira = data[:3]
segundo = data[3:6]
terceira = data[-3:]



nova_data = dia + '.' + mes + '.' + ano
print(nova_data,3)
-- EXECUTION TIME:
0.147875
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1583/main.py", line 9, in <module>
    nova_data = dia + '.' + mes + '.' + ano
NameError: name 'dia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:08:26) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")
i=0
while(i<size(data)):
	primeira = data[:3]
	segundo = data[3:6]
	terceira = data[-3:]



nova_data = dia + '.' + mes + '.' + ano
print(nova_data)
-- EXECUTION TIME:
0.128607
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1583/main.py", line 3, in <module>
    while(i<size(data)):
NameError: name 'size' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:08:33) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")

	primeira = data[:3]
	segundo = data[3:6]
	terceira = data[-3:]



nova_data = dia + '.' + mes + '.' + ano
print(nova_data)
-- EXECUTION TIME:
0.125138
-- ERROR:
  File "/home/codebench/codes/1764/1583/main.py", line 3
    primeira = data[:3]
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:08:38) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")

primeira = data[:3]
segundo = data[3:6]
terceira = data[-3:]



nova_data = dia + '.' + mes + '.' + ano
print(nova_data)
-- EXECUTION TIME:
0.153702
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1583/main.py", line 9, in <module>
    nova_data = dia + '.' + mes + '.' + ano
NameError: name 'dia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:08:39) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")

primeira = data[:3]
segundo = data[3:6]
terceira = data[-3:]



nova_data = dia + '.' + mes + '.' + ano
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    nova_data = dia + '.' + mes + '.' + ano
NameError: name 'dia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:09:09) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")
i=0
while(i<size(data)):
	primeira = data[:3]
	segundo = data[3:6]
	terceira = data[-3:]



saida = primeira + '.' + segundo + '.' + terceira
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(i<size(data)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:09:17) 
-- CODE:
data = input("Informe a data (dd/mm/aaaa): ")
i=0
while(i<size(data)):
	primeira = data[:3]
	segundo = data[3:6]
	terceira = data[-3:]
	i=i+1


saida = primeira + '.' + segundo + '.' + terceira
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(i<size(data)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:09:33) 
-- CODE:
from numpy import*
data = input("Informe a data (dd/mm/aaaa): ")
i=0
while(i<size(data)):
	primeira = data[:3]
	segundo = data[3:6]
	terceira = data[-3:]
	i=i+1


saida = primeira + '.' + segundo + '.' + terceira
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:09:39) 
-- CODE:
from numpy import*
data = input("Informe a data (dd/mm/aaaa): ")
i=0
while(i<size(data)):
	primeira = data[:3]
	segundo = data[3:6]
	terceira = data[-3:]
	i=i+1


saida = primeira + '.' + segundo + '.' + terceira
print(saida)
-- EXECUTION TIME:
0.430606
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:10:23) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")
i=0
while(i<size(numeros)):
	primeira = numeros[:3]
	segundo = numeros[3:6]
	terceira = numeros[-3:]
	i=i+1


saida = primeira + '.' + segundo + '.' + terceira
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:10:29) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")
i=0
while(i<size(numeros)):
	primeira = numeros[:3]
	segundo = numeros[3:6]
	terceira = numeros[-3:]
	i=i+1


saida = primeira + '.' + segundo + '.' + terceira
print(saida)
-- EXECUTION TIME:
0.468981
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:10:49) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")
i=0
while(i<size(numeros)):
	primeira = numeros[:3]
	segundo = numeros[3:6]
	terceira = numeros[-3:]
	i=i+1


saida = primeira + "." + segundo + "." + terceira
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:10:51) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")
i=0
while(i<size(numeros)):
	primeira = numeros[:3]
	segundo = numeros[3:6]
	terceira = numeros[-3:]
	i=i+1


saida = primeira + "." + segundo + "." + terceira
print(saida)
-- EXECUTION TIME:
0.704717
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:14:49) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")


ini = 3 * (numeros-1)
fim = ini + 3

saida = fim
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:15:13) 
-- CODE:
from numpy import*
numeros = int(input("Informe os numeros"))


ini = 3 * (numeros-1)
fim = ini + 3

saida = fim
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:52:31) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")


primeira = numeros[:3]
segundo = numeros[3:6]
terceira = numeros[-3:]

saida = primeira + "." + segundo + "." + terceira
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:52:34) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")


primeira = numeros[:3]
segundo = numeros[3:6]
terceira = numeros[-3:]

saida = primeira + "." + segundo + "." + terceira
print(saida)
-- EXECUTION TIME:
0.539276
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:57:02) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")


primeira = numeros[:3]
segundo = numeros[3:6]
terceira = numeros[-3:]

saida = primeira + "." + segundo + "." + terceira
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:01:09) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")


i=0
while(i<size(numeros)):
	if(size(numeros)>=3):
		saida=[i:i]+"."
	i=i+4

print(saida)
-- ERROR:
File "XXXX", line 8
    saida=[i:i]+"."
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:01:26) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")


i=3
while(i<size(numeros)):
	if(size(numeros)>=3):
		saida=[:i]+"."
	i=i+4

print(saida)
-- ERROR:
File "XXXX", line 8
    saida=[:i]+"."
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:01:59) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")


i=3
while(i<size(numeros)):
	if(size(numeros)>=3):
		saida=[:i]
	i=i+4

print(saida)
-- ERROR:
File "XXXX", line 8
    saida=[:i]
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:02:13) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")


i=3
while(i<size(numeros)):
	if(size(numeros)>=3):
		saida=saida[:i]
	i=i+4

print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:02:46) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")


i=3
while(i<size(numeros)):
	if(size(numeros)>=3):
		saida=saida[:i]+"."
		print(saida)
	i=i+4

print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:03:01) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")


i=3
while(i<size(numeros)):
	if(size(numeros)>=3):
		saida=saida[:i]+"."
		print(saida)
	i=i+4

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:17:18) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")


i=0
u=0
while(i<size(numeros)):
	if(size(numeros)>=3):
		u=u+size+"."
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:17:32) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")


i=0
u=0
while(i<size(numeros)):
	if(size(numeros)>=3):
		u=u+size+"."
		print(u)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:18:14) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")


i=0
u=0
while(i<size(numeros)):
	if(size(numeros)>=3):
		u=u+"."
		print(u)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:18:36) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")


i=0
u=0
while(i<size(numeros)):
	if(size(numeros)>=3):
		u=u+size(numeros)+"."
		print(u)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:18:56) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")


i=0
u=0
while(i<len(numeros)):
	if(len(numeros)>=3):
		u=u+len(numeros)+"."
		print(u)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:19:06) 
-- CODE:
from numpy import*
numeros = input("Informe os numeros")


i=0
u=0
while(i<len(numeros)):
	if(len(numeros)>=3):
		u=u+len(numeros)+"."
		print(str(u))
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:17:29) 
-- CODE:
from numpy import*
n = input("Informe os numeros")

 
d = (n // 100) % 10 
print("O digito das dezenas e: %d",d)

-- EXECUTION TIME:
0.384636
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1583/main.py", line 5, in <module>
    d = (n // 100) % 10 
TypeError: unsupported operand type(s) for //: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:17:30) 
-- CODE:
from numpy import*
n = input("Informe os numeros")

 
d = (n // 100) % 10 
print("O digito das dezenas e: %d",d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:17:52) 
-- CODE:
from numpy import*
n = int(input("Informe os numeros"))

 
d = (n // 100) % 10 
print("O digito das dezenas e: %d",d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:34:31) 
-- CODE:
n=input("")
s=int(n)
i=0
while(i<len(n)):
	if(s[i]%3==0):
		d=n[i]+"."
		print(d)
	
	
	
	
	
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(s[i]%3==0):
TypeError: 'int' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:06) 
-- CODE:
n=input("")
s=int(n)
i=0
while(i<len(n)):
	if(n[i]%3==0):
		d=n[i]+"."
		print(d)
	
	
	
	
	
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(n[i]%3==0):
TypeError: not all arguments converted during string formatting
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:35) 
-- CODE:
n=int(input(""))

i=0
while(i<len(n)):
	if(n[i]%3==0):
		d=n[i]+"."
		print(d)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(i<len(n)):
TypeError: object of type 'int' has no len()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:43) 
-- CODE:
n=int(input(""))

i=0
while(i<size(n)):
	if(n[i]%3==0):
		d=n[i]+"."
		print(d)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(i<size(n)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:53) 
-- CODE:
from numpy import*
n=int(input(""))

i=0
while(i<size(n)):
	if(n[i]%3==0):
		d=n[i]+"."
		print(d)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:14:35) 
-- CODE:
from numpy import*
n=input("")

i=0
d=3
o="."
s=""
while(i<len(n)):
	if(i<(len(n)-4)):
		s=s+n[i:d]+o
	else:
		s=s+n[i:d]
	i=i+3
	d=d+3
		
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:14:43) 
-- CODE:
from numpy import*
n=input("")

i=0
d=3
o="."
s=""
while(i<len(n)):
	if(i<(len(n)-4)):
		s=s+n[i:d]+o
	else:
		s=s+n[i:d]
	i=i+3
	d=d+3
		
print(s)
-- EXECUTION TIME:
0.335144
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:14:47) 
-- CODE:
from numpy import*
n=input("")

i=0
d=3
o="."
s=""
while(i<len(n)):
	if(i<(len(n)-4)):
		s=s+n[i:d]+o
	else:
		s=s+n[i:d]
	i=i+3
	d=d+3
		
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:14:56) 
-- CODE:
from numpy import*
n=input("")

i=0
d=3
o="."
s=""
while(i<len(n)):
	if(i<(len(n)-4)):
		s=s+n[i:d]+o
	else:
		s=s+n[i:d]
	i=i+3
	d=d+3
		
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
